include_directories(timer http threadpool log buffer)
#add_executable(server server.cpp timer/lst_timer.cpp http/http_conn.cpp)
add_executable(server3 server3.cpp buffer/buffer.cpp log/logger.cpp  http/http_conn.cpp timer/heaptimer.cpp)
target_link_libraries(server3 pthread)
add_subdirectory(tests)